# python-pavpen-geometry-calculator

./: .gitignore  Development.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.toml
.github/workflows/: doc.yaml  measure-test-coverage.yaml
build-scripts/: doc_clean.py  save_codecov_badge.py  test_coverage_clean.py
build-scripts/lib/: logging.py  unlink.py
doc/: README.md
doc/source/: conf.py  index.rst
doc/source/api/: index.rst
doc/source/api/pavpen/geometry_calculator/: __init__.rst  circle_calculator.rst  defaults.rst  faults.rst  float_vector_field_operations.rst  orthonormal_basis_calculator.rst  planar_rotation_direction.rst  rounded_corner_calculator.rst  vector_field_float_operations.rst  vector_field_operations.rst
doc/source/api/pavpen/geometry_calculator/vector_field_implementations/: __init__.rst  complex_vector_field_operations.rst  tuple_float_vector_field_operations.rst  tuple_vector_field_float_operations.rst
doc/source/python_packages/sphinx_extensions/select/: __init__.py
doc/source/theme-overrides/templates/: layout.html
src/pavpen/geometry_calculator/: __init__.py  circle_calculator.py  defaults.py  faults.py  float_vector_field_operations.py  orthonormal_basis_calculator.py  planar_rotation_direction.py  rounded_corner_calculator.py  vector_field_float_operations.py  vector_field_operations.py
src/pavpen/geometry_calculator/vector_field_implementations/: __init__.py  complex_vector_field_operations.py  tuple_float_vector_field_operations.py  tuple_vector_field_float_operations.py
tests/: test_circle_calculator.py  test_faults.py  test_float_vector_field_operations.py  test_orthonormal_basis_calculator.py  test_rounded_corner_calculator.py  test_vector_field_float_operations.py  test_vector_field_operations.py
tests/vector_field_implementations/: test_complex_vector_field_operations.py  test_tuple_float_vector_field_operations.py  test_tuple_vector_field_float_operations.py
